# project2_Gulina_Dina_m25_555

./: .gitignore  README.md  db_meta.json  pyproject.toml
data/: users.json
demos/: crud.cast  database.cast  decorators.cast
src/primitive_db/: main.py
